--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#DA2214</color>
+    <color name="darkGray">#D6D0CF</color>
+    <color name="lightGray">#F1E8E7</color>
 </resources>
