connectng update fragment woth repo and viewmodal

--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -35,6 +35,7 @@
                 android:layout_height="match_parent"
                 android:ems="10"
                 android:hint="@string/title"
+                android:text="@{notes.title}"
                 android:inputType="textPersonName"  />
         </com.google.android.material.textfield.TextInputLayout>
 
