--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -5,14 +5,8 @@
             name="notes"
             type="com.example.notetakingapp.model.data.Notes" />
     </data>
-<FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.fragment.AddFragment">
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -55,7 +49,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/description"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -78,9 +71,7 @@
             android:hint="@string/description"
             android:text="@{notes.description}"
             android:inputType="textMultiLine" />
-
     </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
 </layout>
