complete progress on add

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -31,7 +31,7 @@
             android:layout_height="match_parent"
             android:ems="10"
             android:hint="@string/title"
-            android:text="@{notes.title}"
+            android:text="@={notes.title}"
             android:inputType="textPersonName" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -69,7 +69,7 @@
             android:ems="10"
             android:gravity="top|start"
             android:hint="@string/description"
-            android:text="@{notes.description}"
+            android:text="@={notes.description}"
             android:inputType="textMultiLine" />
     </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
