--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -35,7 +35,7 @@
                 android:layout_height="match_parent"
                 android:ems="10"
                 android:hint="@string/title"
-                android:text="@{notes.title}"
+                android:text="@={notes.title}"
                 android:inputType="textPersonName"  />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -75,7 +75,7 @@
                 android:gravity="top|start"
                 android:hint="@string/description"
                 android:inputType="textMultiLine"
-                android:text="@{notes.description}" />
+                android:text="@={notes.description}" />
 
         </com.google.android.material.textfield.TextInputLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
